# Jumpshot-Trainer-v2

./: .gitignore  README.md
athlete_rust/: Cargo.toml
athlete_rust/data/: elite-shot-baselines.json  environment-benchmarks.json
athlete_rust/src/: calibration.rs  data.rs  ingest.rs  lib.rs  main.rs  trainer.rs  training.rs  types.rs
athlete_rust/src/analysis/: diagnostics.rs  mod.rs  session_audit.rs  state_machine.rs
athlete_rust/src/backend/: mod.rs  persistence.rs  video_window.rs
athlete_rust/src/ml/: mod.rs
datasets/: README.md
datasets/calibration_20_shot/annotations/: athlete_profile.json  shots.csv
datasets/models/mediapipe/: README.md
datasets/uploads/: README.md
datasets/uploads/tuning/: README.md  session_20260410T012748Z_side_12266ea4.json  session_20260410T012751Z_angle45_562b09f4.json
docs/: biomech-ai-mvp.md
janitor_python/: README.md  pyproject.toml
janitor_python/src/jumpshot_janitor/: __init__.py  cli.py  exporters.py  schema.py  video_pipeline.py
janitor_python/src/jumpshot_janitor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
schemas/: shot_records.schema.json
