[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jumpshot-janitor"
version = "0.1.0"
description = "Python janitor pipeline for jump-shot data ingestion, auto-label prep, and Parquet export."
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2",
  "pyarrow>=18.0",
  "numpy>=2.0"
]

[project.scripts]
jumpshot-janitor = "jumpshot_janitor.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
